--- a/lab2/task1/style.css
+++ b/lab2/task1/style.css
@@ -17,17 +17,22 @@ body {
 }
 
 #image-container {
-    align-items: center;
-    justify-content: center;
-    max-width: 80%;
-    max-height: 80%;
-    overflow: hidden;
     margin-top: 20px;
-    cursor: pointer;
+    width: 80vw;
+    height: 80vh;
+    overflow: hidden;
+    border-style: solid;
+    border-color: black;
+    border-width: thin;
+    background-image:
+            linear-gradient(45deg, #ccc 25%, transparent 25%, transparent 75%, #ccc 75%),
+            linear-gradient(45deg, #ccc 25%, transparent 25%, transparent 75%, #ccc 75%);
+    background-size: 20px 20px;
+    background-position: 0 0, 10px 10px;
 }
 
 img {
-    max-width: 100%;
-    max-height: 100%;
+    max-width: 80vw;
+    max-height: 80vh;
     object-fit: contain;
 }
