--- a/lab2/task1/style.css
+++ b/lab2/task1/style.css
@@ -17,7 +17,10 @@ body {
 }
 
 #image-container {
+    position: relative;
     margin-top: 20px;
+    max-width: 100%;
+    max-height: 100%;
     width: 80vw;
     height: 80vh;
     overflow: hidden;
@@ -32,7 +35,7 @@ body {
 }
 
 img {
-    max-width: 80vw;
-    max-height: 80vh;
+    width: 100%;
+    height: 100%;
     object-fit: contain;
 }
