--- a/lab2/task2/style.css
+++ b/lab2/task2/style.css
@@ -57,8 +57,8 @@ body {
 }
 
 img {
-    max-width: 80vw;
-    max-height: 80vh;
+    max-width: 100%;
+    max-height: 100%;
     object-fit: contain;
 }
 
